--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+.idea/
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+
 # Built application files
 *.apk
 *.ap_
@@ -25,3 +33,5 @@ proguard/
 
 # Log Files
 *.log
+
+gradle.properties
