--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,4 +121,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
