--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".activities.SettingsActivity">
         </activity>
+        <receiver android:name=".receivers.AlarmBroadcastReceiver"/>
+        <service android:name=".services.AlarmService"/>
     </application>
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
