--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.yuexiaohome.tempalarm"
         minSdkVersion 19
         targetSdkVersion 19
-        versionCode 4
-        versionName "1.03"
+        versionCode 5
+        versionName "1.04"
 
         // dexÍ»ÆÆ65535µÄÏÞÖÆ
         multiDexEnabled true
@@ -87,7 +87,7 @@ android {
         //_360 {}
         //baidu {}
         //xiaomi {}
-        //tencent {}
+        tencent {}
         //taobao {}
     }
 
